--- a/main.css
+++ b/main.css
@@ -41,6 +41,7 @@ body {
 }
 
 .note-assigned {
+    margin: 0;
     position: absolute;
     bottom: 0;
     left: 0;
@@ -61,6 +62,8 @@ body {
 .note-keyboard {
     left: 2px;
     top: 2px;
+    padding: 2px;
+    border-radius: 2px;
 }
 
 #option {
