--- a/main.css
+++ b/main.css
@@ -6,13 +6,16 @@
     }
 }
 
-* {
+html {
+    height: 100%;
     box-sizing: border-box;
+    font-family: "Helvetica", sans-serif;
 }
 
 body {
-    height: 100%;
-    font-family: "Roboto Mono", monospace;
+    min-height: 100%;
+    background-color: rgb(63, 29, 107);
+    font-size: 12px;
 }
 
 #container {
@@ -61,24 +64,32 @@ body {
 }
 
 #option {
+    background-color: #fff;
     position: absolute;
-    top: 8px;
+    bottom: 8px;
     right: 8px;
-    font-size: 12px;
+    display: none;
+}
+
+#option-menu {
+    position: absolute;
+    bottom: 8px;
+    left: 8px;
+
+    background-color: #000;
+    padding: 5px;
+    color: #fff;
 }
 
 input, button, label {
-    font-family: "Roboto Mono", monospace;
+    font-family: "Helvetica", sans-serif;
     font-size: 12px;
     margin: 2px;
 }
 
-@media only screen and (max-width: 768px) {
-    #container {
-        width: 80%;
-    }
-
+@media screen and (max-width: 768px) {
     #option {
+        display: none;
         position: absolute;
         bottom: 8px;
         right: 8px;
