--- a/main.css
+++ b/main.css
@@ -9,7 +9,7 @@
 html {
     height: 100%;
     box-sizing: border-box;
-    font-family: "Helvetica", sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 body {
@@ -82,7 +82,7 @@ body {
 }
 
 input, button, label {
-    font-family: "Helvetica", sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
     font-size: 12px;
     margin: 2px;
 }
