--- a/main.css
+++ b/main.css
@@ -37,6 +37,12 @@ body {
     border-radius: 2px;
     color: #fff;
     position: relative;
+
+    user-select: none;
+   -webkit-user-select: none;
+   -khtml-user-select: none;
+   -moz-user-select: none;
+   -ms-user-select: none;
 }
 
 .note-assigned {
