--- a/main.css
+++ b/main.css
@@ -37,12 +37,14 @@ body {
     border-radius: 2px;
     color: #fff;
     position: relative;
+}
 
+.pad-num, .note-assigned, .note-keyboard {
     user-select: none;
-   -webkit-user-select: none;
-   -khtml-user-select: none;
-   -moz-user-select: none;
-   -ms-user-select: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
 }
 
 .note-assigned {
