--- a/main.css
+++ b/main.css
@@ -33,7 +33,7 @@ body {
     margin: 5px;
     background-color: #202020;
     font-size: 20px;
-    border: none;
+    border: 1px solid #fff;
     border-radius: 2px;
     color: #fff;
     position: relative;
